--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                   <img src="reviews/image12.jpeg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">"Ruby" Review</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text">The attention to detail in each piece of jewelry I encountered was simply breathtaking. It's evident that the brand's artisans pour their heart and soul into creating these masterpieces. From delicate necklaces adorned with intricate filigree work to elegantly crafted rings showcasing dazzling gemstones, every piece exuded a sense of timeless elegance.</p>
                     <p class = "card-text">
                         <small class = "text-muted">
                             <span class = "fw-bold">Author: </span>Favor
@@ -438,7 +438,7 @@
                   <img src="reviews/image16.jpeg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">"Daisy" Review</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    <p class="card-text">Oni Jewelry has an impressive range of collections, each with its own unique character. Whether one seeks classic sophistication, modern minimalism, or a fusion of cultural inspirations, this brand offers a diverse selection to cater to various tastes and preferences. I was particularly drawn to their ethereal nature-inspired collection, which captured the essence of the natural world in every piece.</p>
                     <p class = "card-text">
                         <small class = "text-muted">
                             <span class = "fw-bold">Author: </span>Lilian
@@ -452,7 +452,7 @@
                   <img src="reviews/image17.jpeg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">"Luna" Review</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                    <p class="card-text">One thing that truly impressed me was how Oni's jewelry could transcend trends and become timeless pieces to be cherished for generations. The brand's design philosophy seems to embody the idea that jewelry is not just an accessory but an emotional keepsake to be passed down through the ages.</p>
                     <p class = "card-text">
                         <small class = "text-muted">
                             <span class = "fw-bold">Author: </span>Josephine
